<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Add Contact</string>

    <!-- Contact fields -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>

    <!-- Actions -->
    <string name="add_contact">Add Contact</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="search_contacts">Search contacts</string>

    <!-- Messages -->
    <string name="no_contacts">No contacts yet</string>
    <string name="tap_to_add">Tap + to add a new contact</string>
    <string name="at_least_one_field">Please fill in at least one field</string>
    <string name="contact_added">Contact added successfully</string>
    <string name="contact_updated">Contact updated successfully</string>
    <string name="contact_deleted">Contact deleted</string>
    <string name="error_saving_contact">Error saving contact</string>
    <string name="confirm_delete">Are you sure you want to delete this contact?</string>
    <string name="delete">Delete</string>
</resources>
